# cli

./: .all-contributorsrc  .cliff-jumperrc.yml  .dccache  .eslintrc  .gitignore  .npm-deprecaterc.yml  .prettierignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  cliff.toml  package.json  sonar-project.properties  tsconfig.base.json  tsconfig.eslint.json  typedoc.json
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  continuous-delivery.yml  continuous-integration.yml  labelsync.yml  publish.yml  vuepress-deploy.yml
docs/: README.md
docs/.vuepress/: config.ts
docs/guide/: README.md  custom-templates.md  existing-project.md  generating-components.md  getting-started.md
npm/: getBinary.mjs  install.js  run.mjs
scripts/: clean-oclif-manifest.mjs
src/: cli.ts  config.rs  config.ts  constants.ts  main.rs  tsconfig.json  utils.rs
src/commands/: generate-loader.ts  generate.rs  generate.ts  init.rs  init.ts  migrate.rs  mod.rs  new.rs  new.ts
src/functions/: CommandExists.ts  CreateComponentLoader.ts  CreateFileFromTemplate.ts  FileExists.ts  Spinner.ts  fetchConfig.ts  generateCommandFlow.ts  index.ts
src/lib/: aliases.ts  types.ts
src/prompts/: PromptInit.ts  PromptNew.ts  index.ts
src/task_runner/: mod.rs  tasks.rs
src/templates/: .sapphirerc.json
templates/: .sapphirerc.json.sapphire  .sapphirerc.yml.sapphire
templates/components/: _load.js.sapphire  argument.js.sapphire  argument.ts.sapphire  autocompleteinteractionhandler.js.sapphire  autocompleteinteractionhandler.ts.sapphire  buttoninteractionhandler.js.sapphire  buttoninteractionhandler.ts.sapphire  command.js.sapphire  command.ts.sapphire  contextmenucommand.js.sapphire  contextmenucommand.ts.sapphire  listener.js.sapphire  listener.ts.sapphire  messagecommand.js.sapphire  messagecommand.ts.sapphire  modalinteractionhandler.js.sapphire  (+9 more)
(+4 files in other folders)
