[package]
name = "sapphire-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
git2 = "0.19.0"
indicatif = "0.17.8"
regex = "1.10.6"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["preserve_order"] }
toml = "0.8.16"
toml_edit = "0.22.20"

[[bin]]
name = "sapphire"
path = "src/main.rs"
